# spectre-cpu-gpu-metric-automation

./: .gitignore  README.md  pyproject.toml
src/core/: config.py  monitor.py  reporter.py
src/tests/: test_application.py
