[project]
name = "spectre-cpu-gpu-metric-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gputil>=1.4.0",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
    "python-dotenv>=1.2.2",
    "setuptools>=82.0.1",
    "fonttools==4.62.1",
]
